tests/baselines/reference/privateNamesIncompatibleModifiers.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNamesIncompatibleModifiers.ts(2,5): error TS18010: An accessibility modifier cannot be used with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesIncompatibleModifiers.ts(3,5): error TS18010: An accessibility modifier cannot be used with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesIncompatibleModifiers.ts(4,5): error TS18010: An accessibility modifier cannot be used with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesIncompatibleModifiers.ts(6,5): error TS18019: 'declare' modifier cannot be used with a private identifier.
tests/cases/conformance/classes/members/privateNames/privateNamesIncompatibleModifiers.ts(10,5): error TS18019: 'abstract' modifier cannot be used with a private identifier.


==== tests/cases/conformance/classes/members/privateNames/privateNamesIncompatibleModifiers.ts (5 errors) ====
    class A {
        public #foo = 3;         // Error
        ~~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        private #bar = 3;        // Error
        ~~~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        protected #baz = 3;      // Error
        ~~~~~~~~~
!!! error TS18010: An accessibility modifier cannot be used with a private identifier.
        readonly #qux = 3;       // OK
        declare #what: number;   // Error
        ~~~~~~~
!!! error TS18019: 'declare' modifier cannot be used with a private identifier.
    }
    
    abstract class B {
        abstract #quux = 3;      // Error
        ~~~~~~~~
!!! error TS18019: 'abstract' modifier cannot be used with a private identifier.
    }
    